--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,11 @@ django = "==2.2.5"
 
 [dev-packages]
 pylint = "*"
+flake8 = "*"
+black = "*"
 
 [requires]
 python_version = "3.9"
+
+[pipenv]
+allow_prereleases = true
